# mcp-stdio-toolbox

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
config/: tools.example.yaml
scripts/: openai_chat.py
src/mcp_stdio_toolbox/: __init__.py  config_loader.py  server.py  subprocess_runner.py  tool_registry.py
tests/: __init__.py  test_config_loader.py  test_subprocess_runner.py  test_tool_registry.py
